fixed spacing of nav links in print view

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ solid 2px border using #45ADAD,
     .nav_links {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        /* space-evenly and space-around look different in my emulation vs when I actually go to print... */
+        justify-content: space-around;
     }
     
     /* 18. Edit the pricing class so that the elements align along the bottom.  As long as it aligns along the bottom we don't care if the cards aren't the same height. */
